@@ -6,6 +6,7 @@ Test XML formatting.
 PASS: atom.xml
 PASS: basic.xml
 PASS: rss.xml
+PASS: self-closing.xml
 PASS: tag-case.xml
 PASS: valid-html-invalid-xml.xml
 PASS: xslt.xml
