@@ -12,6 +12,7 @@ function test()
         "resources/xml-tests/atom.xml",
         "resources/xml-tests/basic.xml",
         "resources/xml-tests/rss.xml",
+        "resources/xml-tests/self-closing.xml",
         "resources/xml-tests/tag-case.xml",
         "resources/xml-tests/valid-html-invalid-xml.xml",
         "resources/xml-tests/xslt.xml",
