@@ -1,0 +1,11 @@
+<rect/>
+<circle/>
+<path/>
+<g>
+    <rect/>
+    <circle/>
+    <path/>
+</g>
+<rect/>
+<circle/>
+<path/>
