@@ -1,3 +1,13 @@
+2019-09-20  Devin Rousso  <drousso@apple.com>
+
+        Web Inspector: HTML Formatter - better indentation/newline handling for self closing tags
+        https://bugs.webkit.org/show_bug.cgi?id=202036
+
+        Reviewed by Joseph Pecoraro.
+
+        * UserInterface/Workers/Formatter/HTMLFormatter.js:
+        (HTMLFormatter.prototype._before):
+
 2019-09-20  Joseph Pecoraro  <pecoraro@apple.com>
 
         Web Inspector: Remove BranchManager in favor of just using currentRevision
