@@ -1,3 +1,15 @@
+2019-09-20  Devin Rousso  <drousso@apple.com>
+
+        Web Inspector: HTML Formatter - better indentation/newline handling for self closing tags
+        https://bugs.webkit.org/show_bug.cgi?id=202036
+
+        Reviewed by Joseph Pecoraro.
+
+        * inspector/formatting/formatting-xml.html:
+        * inspector/formatting/formatting-xml-expected.txt:
+        * inspector/formatting/resources/xml-tests/self-closing.xml: Added.
+        * inspector/formatting/resources/xml-tests/self-closing-expected.xml: Added.
+
 2019-09-20  Truitt Savell  <tsavell@apple.com>
 
         Unreviewed, rolling out r250114.
